table_3/results/Picasso_post_nullaway_ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-post/src/src/main/java/com/squareup/picasso3/BitmapHunter.java:210: error: [NullAway] dereferenced expression result is @Nullable
      bitmap = result.getBitmap();
                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-post/src/src/main/java/com/squareup/picasso3/RequestCreator.java:82: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.picasso = null;
                 ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-post/src/src/main/java/com/squareup/picasso3/Picasso.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
2
